fix: fix overflowing css

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 body {
   margin: 0;
-  padding-top: 65px;
-  padding-bottom: 65px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Circular Std",
     "Helvetica Neue", sans-serif;
